# DataQueryAnalyst

./: .gitignore  DOCUMENTATION.md  README.md
backend/: .env  main.py  pyproject.toml
backend/utils/: llmhandler.py  local_storage.py  processdata.py  pythonexecutor.py
frontend/csv-analyzer-ui/: index.html  package-lock.json  package.json
frontend/csv-analyzer-ui/src/: App.css  App.jsx
